--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Paralax Website</title>
+        <title>Bridging Design</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="www.w3Schools.com/lib/w3.css">
         <link rel="stylesheet" href="fontawesome/css/fontawesome-all.css"> 
